# src/routes/api/reviews.js
@@ -13,6 +13,6 @@ const router = express.Router();
 router.get("/", catchErrors(getReviewsController));
 router.post("/newreview", catchErrors(addReviewsController));
 router.post("/isapprove/:reviewId", catchErrors(isApproveReviewsController));
-router.delete("/:reviewId", catchErrors(removeReviewsController));
+router.delete("/:reviewDelId", catchErrors(removeReviewsController));
 
 module.exports = router;
